<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_image"
            android:padding="10dp"
            android:text="@string/name"
            android:layout_alignParentLeft="true"/>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/title_name"
            android:layout_alignTop="@id/title_name"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/iv_image" />

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_name"
            android:padding="10dp"
            android:text="@string/description"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toRightOf="@id/title_description"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/title_description"
            android:layout_alignLeft="@id/tv_name"/>

        <TextView
            android:id="@+id/title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@id/title_description"
            android:padding="10dp"
            android:layout_alignParentLeft="true"/>

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_toRightOf="@id/title_category"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/title_category"
            android:layout_alignLeft="@id/tv_name"/>

        <TextView
            android:id="@+id/title_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:layout_below="@id/title_category"
            android:padding="10dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_category"
            android:layout_toRightOf="@id/title_calories"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/title_calories"
            android:layout_alignLeft="@id/tv_name"/>

        <TextView
            android:id="@+id/title_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prise"
            android:layout_below="@id/title_calories"
            android:padding="10dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_calories"
            android:layout_toRightOf="@id/title_price"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/title_price"
            android:layout_alignLeft="@id/tv_name"/>

        <TextView
            android:id="@+id/title_ingredients"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/ingredients"
            android:layout_below="@id/title_price"
            android:padding="10dp"
            android:layout_alignParentLeft="true"/>

        <ListView
            android:id="@+id/listofIngredients"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/tv_price"
            android:layout_toRightOf="@id/title_ingredients"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/title_ingredients"
            android:layout_alignLeft="@id/tv_name"/>

    <Button
        android:id="@+id/open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_camera"
        android:onClick="btnOpenCameraClicked"
        android:text="@string/camera_button_name"
        android:layout_below="@id/title_ingredients"
        android:layout_alignParentLeft="true"/>

</RelativeLayout>

    </ScrollView>